# brainfuck

./: README.md  brainwords.js  brainwords.m  brainwords.py  brainwords.rb  brainwords.rs  main.cpp
cpp-brainwords/: README.md
cpp-brainwords/0.1.0/: README.md
cpp-brainwords/1.0.0/: README.md
cpp-brainwords/1.0.0/examples/: main.cpp
cpp-brainwords/1.0.0/include/: brainwords.h
cpp-brainwords/include/: brainwords.h
examples/: loop10.bf
js-brainwords/1.0.0/: brainwords.js
matlab-brainwords/: brainwords.m
py-brainwords/: README.md  brainwords.py
rb-brainwords/: brainwords.rb
rust-brainpreter/: Cargo.toml  README.md
rust-brainpreter/src/: lib.rs
rust-brainpreter/src/core/: error.rs  instruction.rs  memory.rs  mod.rs  parser.rs  program.rs
rust-brainwords/: Cargo.toml  README.md
rust-brainwords/src/: lib.rs
src/: lib.rs
src/core/: error.rs  instruction.rs  memory.rs  mod.rs  parser.rs  program.rs
